...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />


    <Button
        android:id="@+id/button_sort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Sort" />

    <LinearLayout
        android:layout_width="match_parent"
...
